--- a/.github/workflows/sonarcloud-publish.yml
+++ b/.github/workflows/sonarcloud-publish.yml
@@ -41,6 +41,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"SOAT1-GRP13_TechChallenge-Pagamento" /o:"soat1-grp13" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"SOAT1-GRP13_TechChallenge-Pagamento" /o:"soat1-grp13" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:"sonar.verbose=true" /d:"sonar.dotnet.excludeTestProjects=true" /d:"sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet restore Pagamento.sln
+          dotnet build Pagamento.sln --no-restore --configuration Release
+          dotnet test Pagamento.sln --no-restore --configuration Release --collect:"XPlat Code Coverage;Format=opencover"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
