teste no windows

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -10,9 +10,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AWS": {
-    "Profile": "terraform",
-    "Region": "us-west-2"
+  "RabbitMQ": {
+    "Hostname": "localhost",
+    "VirtualHost": "/rabbit",
+    "Port": 5672,
+    "Username": "user",
+    "Password": "password",
+    "QueuePedidoConfirmado": "pedido_confirmado",
+    "QueueQrGerado": "qr_gerado",
+    "QueuePedidoPago": "pedido_pago",
+    "QueuePedidoPreparando": "pedido_preparando",
+    "QueuePedidoPronto": "pedido_pronto"
   },
-  "AWS_PROFILE": "terraform"
+  "DynamoLocal": {
+    "ServiceURL": "http://localhost:8000"
+  },
+  "AWS": {
+    "AccessKey": "Aksdjaksdhueiadqwert",
+    "SecretKey": "dshdajksdhajskdhasjkdhasjkdashkjqwertyui",
+    "Region": "ddblocal"
+  }
 }
