--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "AWS": {
-    "Profile": "terraform",
+    "AccessKey": "AKIA4EXM5HQWYABOGSUU",
+    "SecretKey": "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",
     "Region": "us-west-2"
-  },
-  "AWS_PROFILE": "terraform"
+  }
 }
