adicionando dummy credentials em ambiente de dev

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -28,6 +28,6 @@
   "AWS": {
     "AccessKey": "Aksdjaksdhueiadqwert",
     "SecretKey": "dshdajksdhajskdhasjkdhasjkdashkjqwertyui",
-    "Region": "ddblocal"
+    "Region": "us-west-1"
   }
 }
