--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "AWS": {
-    "AccessKey": "AKIA4EXM5HQWYABOGSUU",
-    "SecretKey": "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",
+    "Profile": "terraform",
     "Region": "us-west-2"
   }
 }
