ajuste no fake webhook para recusar pedidos

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -20,7 +20,8 @@
     "QueueQrGerado": "qr_gerado",
     "QueuePedidoPago": "pedido_pago",
     "QueuePedidoPreparando": "pedido_preparando",
-    "QueuePedidoPronto": "pedido_pronto"
+    "QueuePedidoPronto": "pedido_pronto",
+    "QueuePedidoRecusado": "pedido_recusado"
   },
   "DynamoLocal": {
     "ServiceURL": "http://localhost:8000"
