--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,46 @@
 version: '3'
 services:
-  app:
+  dynamodb-local:
+   command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+   image: "amazon/dynamodb-local:latest"
+   container_name: dynamodb-local
+   ports:
+     - "8000:8000"
+   volumes:
+     - "./docker/dynamodb:/home/dynamodblocal/data"
+   working_dir: /home/dynamodblocal
+
+  dynamodb-init:
+    depends_on:
+      - dynamodb-local
+    image: amazon/aws-cli
+    restart: on-failure 
+    environment:
+      AWS_ACCESS_KEY_ID: Aksdjaksdhueiadqwert
+      AWS_SECRET_ACCESS_KEY: dshdajksdhajskdhasjkdhasjkdashkjqwertyui
+    command: >-
+      dynamodb create-table
+          --table-name PedidosQR
+          --attribute-definitions
+              AttributeName=pedidoId,AttributeType=S
+          --key-schema
+              AttributeName=pedidoId,KeyType=HASH
+          --billing-mode PAY_PER_REQUEST
+          --endpoint-url http://dynamodb-local:8000 --region us-west-1
+
+  api-pagamento:
     build:
       context: .
+      args:
+        - BUILD_CONFIGURATION=Debug
       dockerfile: Dockerfile
     image: tech-challenge-soat1-grp13-pagamento:latest
-    restart: on-failure
+    restart: on-failure    
     ports:
-      - "80:80"
+      - "5274:80"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - RabbitMQ:Hostname=rabbitmq
+      - DynamoLocal:ServiceURL=http://dynamodb-local:8000
+    links:
+      - dynamodb-local
