Ajuste para utilizar a exchange por status

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -16,12 +16,11 @@
     "Port": 5672,
     "Username": "user",
     "Password": "password",
-    "QueuePedidoConfirmado": "pedido_confirmado",
-    "QueueQrGerado": "qr_gerado",
-    "QueuePedidoPago": "pedido_pago",
-    "QueuePedidoPreparando": "pedido_preparando",
-    "QueuePedidoPronto": "pedido_pronto",
-    "QueuePedidoRecusado": "pedido_recusado"
+    "ExchangePedidoConfirmado": "exc_pedido_confirmado",
+    "ExchangePedidoPago": "exc_pedido_pago",
+    "ExchangePedidoRecusado": "exc_pedido_recusado",
+    "QueuePedidoConfirmado": "pedido_confirmado_pagamento",
+    "QueueQrGerado": "qr_gerado"
   },
   "DynamoLocal": {
     "ServiceURL": "http://localhost:8000"
