--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,26 +1,23 @@
 {
-  "Producao_url": "http://localhost:5267",
   "MercadoPagoUserId": "1461566949",
   "AccesToken": "TEST-1108762174965961-083113-d0ae461f7a9c492d122913a94c6833b7-1461566949",
   "Notification_url": "https://webhook.site/5a39a921-2433-4068-9e81-a39ee64f5133",
   "External_Pos_Id": "FFFC01",
+  "Rabbit_Hostname": "localhost",
+  "Rabbit_VirtualHost": "/rabbit",
+  "Rabbit_Port": 5672,
+  "Rabbit_Username": "user",
+  "Rabbit_Password": "password",
+  "ExchangePedidoConfirmado": "exc_pedido_confirmado",
+  "ExchangePedidoPago": "exc_pedido_pago",
+  "ExchangePedidoRecusado": "exc_pedido_recusado",
+  "QueuePedidoConfirmado": "pedido_confirmado_pagamento",
+  "QueueQrGerado": "qr_gerado",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "RabbitMQ": {
-    "Hostname": "localhost",
-    "VirtualHost": "/rabbit",
-    "Port": 5672,
-    "Username": "user",
-    "Password": "password",
-    "ExchangePedidoConfirmado": "exc_pedido_confirmado",
-    "ExchangePedidoPago": "exc_pedido_pago",
-    "ExchangePedidoRecusado": "exc_pedido_recusado",
-    "QueuePedidoConfirmado": "pedido_confirmado_pagamento",
-    "QueueQrGerado": "qr_gerado"
   },
   "DynamoLocal": {
     "ServiceURL": "http://localhost:8000"
