passando int para string

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,7 +5,7 @@
   "External_Pos_Id": "FFFC01",
   "Rabbit_Hostname": "localhost",
   "Rabbit_VirtualHost": "/rabbit",
-  "Rabbit_Port": 5672,
+  "Rabbit_Port": "5672",
   "Rabbit_Username": "user",
   "Rabbit_Password": "password",
   "ExchangePedidoConfirmado": "exc_pedido_confirmado",
