teste sem o enviroment

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -23,8 +23,7 @@
     "ServiceURL": "http://localhost:8000"
   },
   "AWS": {
-    "AccessKey": "Aksdjaksdhueiadqwert",
-    "SecretKey": "dshdajksdhajskdhasjkdhasjkdashkjqwertyui",
-    "Region": "us-west-1"
+    "Profile": "terraform",
+    "Region": "us-west-2"
   }
 }
