colocando localoptions em prd com valor vazio

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DynamoLocal": {
+    "ServiceURL": ""
+  },
   "AllowedHosts": "*",
   "AWS": {
     "Profile": "terraform",
