--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,9 +8,5 @@
   "DynamoLocal": {
     "ServiceURL": ""
   },
-  "AllowedHosts": "*",
-  "AWS": {
-    "Profile": "terraform",
-    "Region": "us-west-2"
-  }
+  "AllowedHosts": "*"
 }
