fake aws credentials para local

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -23,7 +23,8 @@
     "ServiceURL": "http://localhost:8000"
   },
   "AWS": {
-    "Profile": "terraform",
-    "Region": "us-west-2"
+    "AccessKey": "Aksdjaksdhueiadqwert",
+    "SecretKey": "dshdajksdhajskdhasjkdhasjkdashkjqwertyui",
+    "Region": "us-west-1"
   }
 }
